objects/FieloEE__RedemptionRuleCriteria__c.object
<CustomObject>
    <description>Criteria for a member to belong to a segment.</description>
    <fields>
        <fullName>FieloEE__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__DateValue__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__FieldName__c</fullName>
        <label>Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__FieldType__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Id, FieloEE__FieldName__c + &apos; &apos; + Text(FieloEE__Operator__c ) + &apos; &apos; + FieloEE__Values__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__NumberValue__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>not contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__RedemptionRule__c</fullName>
        <label>Redemption Rule</label>
        <referenceTo>FieloEE__RedemptionRule__c</referenceTo>
        <relationshipName>Redemption_Criterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloEE__Values__c</fullName>
        <label>Values</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Redemption Rule Criteria</label>
    <nameField>
        <label>Redemption Criteria</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Redemption Rule Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>